ETSL-517 page navigation alignment issues and ETSL-723 footer alignment issues

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/config_section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/config_section.scss
@@ -101,8 +101,8 @@
 
 .links-wrapper {
 	position: absolute;
-	top: 25px;
-	right: 30px;
+	top: toRem(25);
+	right: 0;
 	z-index: 9;
 	@include respond-to-max($desktop) {
 		right: 0;
@@ -291,7 +291,7 @@
 	*[dir="rtl"] {
 	  .config-section-wrap {
 		.links-wrapper {
-		  left: 30px;
+		  left: 0;
 		  right: auto;
 		}
 		.simplebar-wrapper {
